refactor: 优化项目配置和完善gitignore
- 完善.gitignore文件，添加更多Python项目最佳实践规则
- 忽略测试相关文件(test_result.txt, test_search.py)
- 添加IDE配置文件和临时文件过滤规则
- 更新PyInstaller配置(FileFinder.spec)
- 更新应用程序入口

--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,21 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
+.pytest_cache/
+htmlcov/
+.coverage
+.tox/
+coverage.xml
+*.cover
 
 # Virtual Environment
 .venv/
 venv/
 ENV/
 env/
+env.bak/
+venv.bak/
 
 # IDE
 .vscode/
@@ -32,11 +41,33 @@ env/
 *.swp
 *.swo
 *~
+*.sublime-project
+*.sublime-workspace
 
 # OS
 .DS_Store
 Thumbs.db
+.AppleDouble
+.LSOverride
 
 # Project specific
 .file_finder_cache/
 .file_finder_config.json
+test_result.txt
+test_search.py
+
+# Compiled files
+*.pyo
+*.pyd
+*.c
+*.o
+*.a
+*.so
+*.sh
+*.exe
+
+# Temporary files
+*.tmp
+*.temp
+*~
+.~*
